2021-11-30  Franz Holzinger  <franz@ttproducts.de>
    * compatibility with TYPO3 11: No other modifications.

2021-07-13  Franz Holzinger  <franz@ttproducts.de>
    * fix issue #5: Use the domain jambagecom in the composer.json.

2020-11-24  Franz Holzinger  <franz@ttproducts.de>
    * fix issue from static_info_tables_de: Undo part of latest pullrequest to the former version 10.0 support.

2020-11-18  Franz Holzinger  <franz@ttproducts.de>
    * Important bugfix to the former version 10.0 support.
    * Simplification of the TCA files.

2020-09-08  Franz Holzinger  <franz@ttproducts.de>
    * remove unnecessary part from SQL WHERE:
        AND lg_country_iso_2=''
        ,cu_sub_name_es=''
    * Merge pull request #3: Add Kosovo

2019-11-27  Franz Holzinger  <franz@ttproducts.de>
    * compatibility with TYPO3 10: Add the file Configuration/Extbase/Persistence/Classes.php.

2019-02-21  Franz Holzinger  <franz@ttproducts.de>
    * compatibility for TYPO3 9.5

2018-08-07  Franz Holzinger  <franz@ttproducts.de>
    * bugfix: use typo3/cms-core in composer.json
    * use the $tablename variable for the TCA

2018-08-06  Franz Holzinger  <franz@ttproducts.de>
    * adaptions to composer.json

2017-05-17  Franz Holzinger  <franz@ttproducts.de>
    * remove autoload psr-4 for SJBR\StaticInfoTables\ from composer.json

2017-04-10  Franz Holzinger  <franz@ttproducts.de>
    * modify extension version
    * add a composer.json file

2017-03-11  Franz Holzinger  <franz@ttproducts.de>
    * ready for TYPO3 8.x

2015-10-20  Franz Holzinger  <franz@ttproducts.de>
	* update for static_info_tables 6.3.1 and TYPO3 6.2 and 7.99
	* add documentation

2015-09-02  Franz Holzinger  <franz@ttproducts.de>
	* Add countries: CS
	* Modify countries: AX, GG, BQ
	* Add currencies: GHC, MZM, ROL, TMM

2015-08-06  Franz Holzinger  <franz@ttproducts.de>
	* update for static_info_tables 6.2.1 and TYPO3 6.2 and 7.0

2014-02-25  Romain Hobsterdre  <hobsty@gmail.com>